# MultiSub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json
cmake/linux/: defaults.cmake
data/locale/: en-US.ini
docs/: architecture.md  contributing.md  models.md  roadmap.md  spec.md
src/: multisub-filter.cpp  multisub-filter.h  plugin-main.cpp
src/audio/: asr-engine.cpp  asr-engine.h  audio-capture.cpp  audio-capture.h  audio-engine.cpp  audio-utils.cpp  audio-utils.h  noise-classifier.cpp  noise-classifier.h
src/fusion/: multi-channel-renderer.cpp  multi-channel-renderer.h  subtitle-buffer.cpp  subtitle-buffer.h  subtitle-fusion.cpp  subtitle-fusion.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h  model-loader.cpp  model-loader.h
src/vision/: avhubert_native_runner.py  lipread-engine.cpp  lipread-engine.h  vision-engine.cpp
